# sol-trade-sdk

./: .env.example  .gitignore  .iflowignore  .qoderignore  .rooignore  AGENTS.md  Cargo.toml  IFLOW.md  Makefile  README.md  README_CN.md  clippy.toml  rust-toolchain.toml  rustfmt.toml  test  test.sh
.config/: nextest.toml
.iflow/: IFLOW.md  settings.json
docs/: 2026-01-07-raydium-amm-v4-find-pool-by-mint.md  Jito_Testnet_vs_Mainnet.md  Jito三明治防护功能.md  MockRpc使用指南.md  Nextest使用指南.md  Pool查询方法.md  Pool选择算法分析.md  PumpSwap池类型.md  Raydium (WSOL-USDC) Market.json  Raydium API 接口分析.md  Raydium CLMM Pool.json  Raydium CPMM Pool.json  TRANSACTION_CALLBACK.md  discriminator_system.md  id.json  jito_testnet_bundle_test.md  mock_architecture_verification.md  parser_implementation_summary.md  pda-ata-analysis.md  pump-pool-status-analysis.md  raydium-api-analysis.md  raydium-cpmm-pool-lookup.md  raydium-pool-close-analysis.md  refactoring_completion_report.md  txs.md  交易参数参考.md  从test.sh迁移到Makefile.md
examples/: jito_sandwich_protection.rs
examples/pumpfun_buy_test/: Cargo.toml
examples/pumpfun_buy_test/src/: main.rs
examples/pumpswap_direct_trading_new_pool/: Cargo.toml
examples/pumpswap_direct_trading_new_pool/src/: main.rs
scripts/: accounts.json  check_error_tolerance.py  extract_accounts_from_tx.sh  run_rust_tests.py  start_validator.sh  test_latency.sh
src/: lib.rs
tests/: analyze_known_pool.rs  auto_mock_pool_tests.rs  auto_mock_rpc_test.rs  check_known_cpmm_pool.rs  clmm_integration_tests.rs  debug_clmm_instruction.rs  debug_clmm_v2.rs  debug_raydium_v4.rs  (+47 more)
(+258 files in other folders)
